--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
 </head>
 <body>
     <div class="container">
+        <djv class="header">
+            <div class="form">
+                <form action="#" method="post">
+                    <div class="input">
+                        <label for="title">Player 1</label>
+                        <input type="text" id="player1">
+                    </div>
+                    <div class="input">
+                        <label for="author">Player 2</label>
+                        <input type="text" id="player2">
+                    </div>
+                </form>
+                <button id="startbtn">Start</button>
+            </div>
+            <h1 id="message"></h1>
+        </djv>
         <div class="board">
-            <!-- <div class="square">X</div>
-            <div class="square">O</div>
-            <div class="square">X</div>
-            <div class="square">X</div>
-            <div class="square">O</div>
-            <div class="square">O</div>
-            <div class="square">X</div>
-            <div class="square">O</div>
-            <div class="square">X</div> -->
         </div>
     </div>
 </body>
